--- a/stylesheets/dashboard/_admin.scss
+++ b/stylesheets/dashboard/_admin.scss
@@ -1,4 +1,4 @@
-$card-width	: 225px;
+$card-width	: calc((100% / 4) - 52px);
 
 #admin-wrapper {
 	width: 100%; height: 100%;
@@ -6,7 +6,7 @@ $card-width	: 225px;
 		#admin-content-wrapper {
 			width: 100%;
 			.admin-card {
-				width: $card-width; padding: 25px; margin: 15px; display: inline-block; position: relative; @include cardDefault();
+				width: $card-width; padding: 25px; margin: 10px; display: inline-block; position: relative; @include cardDefault();
 				.admin-ceil { font-weight: bolder; font-size: 17px; margin-bottom: 3px; }
 				.admin-floor {}
 
