--- a/stylesheets/dashboard/essay/_answer.scss
+++ b/stylesheets/dashboard/essay/_answer.scss
@@ -1,4 +1,4 @@
-$card-width	: 550px;
+$card-width	: calc((100% / 2) - 52px);
 
 #essayans-wrapper {
 	width: 100%; height: 100%;
@@ -6,7 +6,7 @@ $card-width	: 550px;
 		#essayans-content-wrapper {
 			width: 100%;
 			.essayans-card {
-				width: $card-width; padding: 15px; margin: 15px; display: inline-block; position: relative; @include cardDefault();
+				width: $card-width; padding: 15px; margin: 10px; display: inline-block; position: relative; @include cardDefault();
 				.dash-label { margin-bottom: 5px; }
 				.essayans-divider { width: 100%; border-bottom: 1px solid #ddd; margin: 10px 0px; }
 				.essayans-question-container {
