--- a/stylesheets/dashboard/essay/_question.scss
+++ b/stylesheets/dashboard/essay/_question.scss
@@ -1,4 +1,4 @@
-$card-width	: 375px;
+$card-width	: calc((100% / 3) - 52px);
 
 #essay-wrapper {
 	width: 100%; height: 100%;
@@ -6,7 +6,7 @@ $card-width	: 375px;
 		#essay-content-wrapper {
 			width: 100%;
 			.essay-card {
-				width: $card-width; padding: 15px; margin: 15px; display: inline-block; position: relative; @include cardDefault();
+				width: $card-width; padding: 15px; margin: 10px; display: inline-block; position: relative; @include cardDefault();
 				.dash-label { margin-bottom: 5px; }
 				.essay-divider { width: 100%; border-bottom: 1px solid #ddd; margin: 10px 0px; }
 				.essay-question-container {
