--- a/views/dashboard/choices/answer.html
+++ b/views/dashboard/choices/answer.html
@@ -24,7 +24,7 @@
 	</div>
 	<div id="choicesans-content" class="dash-content">
 		<div id="choicesans-content-wrapper" masonry preserve-order infinite-scroll='loadMoar()' infinite-scroll-disabled='pauseAjx || doneAjx' infinite-scroll-distance='1' infinite-scroll-container="'#choicesans-content'">
-			<div class="choicesans-card cursor-default masonry-brick" ng-repeat="o in data track by $index" ng-class="{ 'wrong-answer': o.correct_response !== o.status_answer }">
+			<div class="choicesans-card cursor-default masonry-brick" ng-repeat="o in data track by $index" ng-class="{ 'wrong-answer': o.status_answer }">
 				<div class="choicesans-question-container">
 					<div class="dash-label">pertanyaan</div>
 					<div class="dash-value choicesans-question">{{ o.question_text || '-' }}</div>
@@ -32,7 +32,6 @@
 				<div class="choicesans-divider"></div>
 				<div class="choicesans-answer-container">
 					<div class="dash-label">jawaban dari <strong>{{ o.usr_display_name }}</strong></div>
-					<div class="dash-value choicesans-answer">{{ o['response_' + o.status_answer] }}</div>
 				</div>
 				<div class="choicesans-divider"></div>
 				<div class="choicesans-timestamp">
