--- a/stylesheets/dashboard/_statistic.scss
+++ b/stylesheets/dashboard/_statistic.scss
@@ -51,6 +51,11 @@ $average-back	: #A2C5AC;
 						span { font-family: $signika; font-size: 45px; line-height: 40px; font-weight: 100; letter-spacing: -4px; margin-right: 2px; }
 					}
 				}
+				#time-container {
+					color: white; z-index: 1; position: absolute; top: 30px; right: 30px;
+					span { margin-left: 10px; }
+					md-datepicker { margin-left: 10px; input { color: white; width: 150px; }}
+				}
 				#overview-disclaimer { color: white; z-index: 1; position: absolute; bottom: 0px; left: 5px; letter-spacing: -0.5px; font-family: $signika-neg; font-size: 13px; }
 			}
 
@@ -104,12 +109,12 @@ $average-back	: #A2C5AC;
 						width: 100%; display: flex; position: absolute; top: 0px;
 						.achiever-1, .achiever-2, .achiever-3 {
 							width: calc((100% / 3) - 1px); text-align: center;
-							.achiever-ceil { font-size: 17px; line-height: 10px; overflow: visible; letter-spacing: -2px; }
+							.achiever-ceil { font-size: 17px; line-height: 10px; letter-spacing: -2px; padding-top: 5px; }
 							.achiever-floor { font-size: 14px; opacity: $fa-opacity; letter-spacing: -1.5px; }
 						}
-						.achiever-1 { padding-top: 17%; }
-						.achiever-2 { padding-top: 35%; }
-						.achiever-3 { padding-top: 52%; }
+						.achiever-1 { padding-top: calc(17% - 5px); }
+						.achiever-2 { padding-top: calc(35% - 5px); }
+						.achiever-3 { padding-top: calc(52% - 5px); }
 					}
 				}
 				.sideview-rest-container {
