--- a/views/dashboard/statistic.html
+++ b/views/dashboard/statistic.html
@@ -14,6 +14,12 @@
 								</div>
 							</div>
 						</div>
+						<div id="time-container">
+							<label class="cursor-default">Periode data:</label>
+							<md-datepicker ng-model="startDate" md-max-date="endDate" md-placeholder="Tanggal awal" md-hide-icons="calendar" ng-change="dateChange()" md-open-on-focus></md-datepicker>
+							<span>s.d.</span>
+							<md-datepicker ng-model="endDate" md-min-date="startDate" md-placeholder="Tanggal akhir" md-hide-icons="calendar" ng-change="dateChange()" md-open-on-focus></md-datepicker>
+						</div>
 						<div id="overview-disclaimer" class="cursor-default">* data diambil pada {{ currentTime }}</div>
 					</div>
 				</div>
@@ -65,15 +71,15 @@
 								<div class="sideview-achiever">
 									<div class="achiever-2">
 										<div class="achiever-ceil ellipsis">{{ data.topscore[1].usr_display_name || '-' }}</div>
-										<div class="achiever-floor">{{ data.topscore[1].usr_score || 0 }} points</div>
+										<div class="achiever-floor">{{ data.topscore[1].jumlah || 0 }} jawaban</div>
 									</div>
 									<div class="achiever-1">
 										<div class="achiever-ceil ellipsis">{{ data.topscore[0].usr_display_name || '-' }}</div>
-										<div class="achiever-floor">{{ data.topscore[0].usr_score || 0 }} points</div>
+										<div class="achiever-floor">{{ data.topscore[0].jumlah || 0 }} jawaban</div>
 									</div>
 									<div class="achiever-3">
 										<div class="achiever-ceil ellipsis">{{ data.topscore[2].usr_display_name || '-' }}</div>
-										<div class="achiever-floor">{{ data.topscore[2].usr_score || 0 }} points</div>
+										<div class="achiever-floor">{{ data.topscore[2].jumlah || 0 }} jawaban</div>
 									</div>
 								</div>
 							</div>
@@ -81,7 +87,7 @@
 								<div class="sideview-rest" ng-repeat="o in data.topscore | startFrom : 3">
 									<div class="sideview-rest-number">{{ $index + 4 }}.</div>
 									<div class="sideview-rest-name">{{ o.usr_display_name }}</div>
-									<div class="sideview-rest-points">{{ o.usr_score }} points</div>
+									<div class="sideview-rest-points">{{ o.jumlah }} jawaban</div>
 								</div>
 							</div>
 						</div>
@@ -105,15 +111,15 @@
 								<div class="sideview-achiever">
 									<div class="achiever-2">
 										<div class="achiever-ceil ellipsis">{{ data.topcontribution[1].usr_display_name || '-' }}</div>
-										<div class="achiever-floor">{{ data.topcontribution[1].usr_contribution || 0 }} kontribusi</div>
+										<div class="achiever-floor">{{ data.topcontribution[1].jumlah || 0 }} kontribusi</div>
 									</div>
 									<div class="achiever-1">
 										<div class="achiever-ceil ellipsis">{{ data.topcontribution[0].usr_display_name || '-' }}</div>
-										<div class="achiever-floor">{{ data.topcontribution[0].usr_contribution || 0 }} kontribusi</div>
+										<div class="achiever-floor">{{ data.topcontribution[0].jumlah || 0 }} kontribusi</div>
 									</div>
 									<div class="achiever-3">
 										<div class="achiever-ceil ellipsis">{{ data.topcontribution[2].usr_display_name || '-' }}</div>
-										<div class="achiever-floor">{{ data.topcontribution[2].usr_contribution || 0 }} kontribusi</div>
+										<div class="achiever-floor">{{ data.topcontribution[2].jumlah || 0 }} kontribusi</div>
 									</div>
 								</div>
 							</div>
@@ -121,7 +127,7 @@
 								<div class="sideview-rest" ng-repeat="o in data.topcontribution | startFrom : 3">
 									<div class="sideview-rest-number">{{ $index + 4 }}.</div>
 									<div class="sideview-rest-name">{{ o.usr_display_name }}</div>
-									<div class="sideview-rest-points">{{ o.usr_contribution }} kali</div>
+									<div class="sideview-rest-points">{{ o.jumlah }} kali</div>
 								</div>
 							</div>
 						</div>
@@ -139,7 +145,7 @@
 							<div class="sideview-village-container" ng-repeat="o in data.topvillage track by $index" set-village-width="{{ o.jumlah }}">
 								{{ o.name_desa }}
 								<div class="sideview-village-number">
-									{{ $index + 1 | ordinal }}
+									{{ $index + 1 | ordinal }}, {{ o.jumlah }} org
 								</div>
 								<!-- <md-tooltip>{{ o.jumlah }} user from {{ o.name_desa }}</md-tooltip> -->
 							</div>
