--- a/views/dashboard/essay/answer.html
+++ b/views/dashboard/essay/answer.html
@@ -45,7 +45,7 @@
 				<div class="essayans-timestamp">
 					Dijawab pada: <span>{{ toDate(o.submitted_date) }}</span>
 				</div>
-				<i class="fa fa-times cursor-pointer" ng-click="delete(o.id, o.usr_display_name, $event)"><md-tooltip md-autohide="true">delete this answer</md-tooltip></i>
+				<i ng-if="$parent.role" class="fa fa-times cursor-pointer" ng-click="delete(o.id, o.usr_display_name, $event)"><md-tooltip md-autohide="true">delete this answer</md-tooltip></i>
 			</div>
 		</div>
 		<div class="dash-load-more" class="cursor-default" ng-show="pauseAjx">{{ loading }}</div>
