--- a/views/dashboard/essay/question.html
+++ b/views/dashboard/essay/question.html
@@ -27,14 +27,14 @@
 					<li ng-repeat="opt in ::categories" ng-click="selectCate(opt)" class="cursor-pointer">{{ opt.name }}</li>
 				</ul>
 			</div>
-			<div class="header-button">
+			 <div class="header-button" ng-if="$parent.role">
 				<div class="button-like cursor-pointer" ng-click="newQuestion()"><i class="fa fa-plus" aria-hidden="true"></i> Pertanyaan Baru</div>
 			</div>
 		</div>
 	</div>
 	<div id="essay-content" class="dash-content">
 		<div id="essay-content-wrapper" masonry preserve-order infinite-scroll='loadMoar()' infinite-scroll-disabled='pauseAjx || doneAjx' infinite-scroll-distance='1' infinite-scroll-container="'#essay-content'">
-			<div class="essay-card cursor-pointer masonry-brick" ng-repeat="o in data track by $index" ng-class="" ng-click="edit(o.id)">
+			<div class="essay-card masonry-brick" ng-repeat="o in data track by $index" ng-click="edit(o.id)" ng-class="{ 'cursor-pointer': $parent.role, 'cursor-default': !$parent.role }">
 				<div class="essay-question-container">
 					<div class="dash-label">pertanyaan</div>
 					<div class="dash-value essay-question">{{ o.question }}</div>
@@ -43,7 +43,7 @@
 				<div class="essay-category">
 					kategori: <span class="color-{{ o.ID_category }}">{{ o.category_name }}</span>
 				</div>
-				<i class="fa fa-times" ng-click="delete(o.id, o.question, $event)"><md-tooltip md-autohide="true">hapus pertanyaan ini</md-tooltip></i>
+				<i ng-if="$parent.role" class="fa fa-times" ng-click="delete(o.id, o.question, $event)"><md-tooltip md-autohide="true">hapus pertanyaan ini</md-tooltip></i>
 			</div>
 		</div>
 		<div class="dash-load-more" class="cursor-default" ng-show="pauseAjx">{{ loading }}</div>
