--- a/views/auth/auth.html
+++ b/views/auth/auth.html
@@ -14,7 +14,7 @@
 					<input type="password" ng-model="password" required/>
 				</md-input-container>
 
-				<button type="submit" class="hidden">Login</button>
+				<button type="submit" class="push-back">Login</button>
 			</form>
 			<div id="auth-error" class="cursor-default" ng-show="errmessage">{{ errmessage }}</div>
 		</div>
