--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -38,6 +38,7 @@ input::-webkit-inner-spin-button, input::-webkit-outer-spin-button { -webkit-app
     user-select: none;
 }
 .hidden { display: none!important; }
+.push-back { visibility: hidden; }
 html, body, body > div#root {
 	width: 100%; height: 100%; margin: 0px; padding: 0px; overflow: hidden; font-family: $def-font-stack; font-size: 14px;
 	-webkit-font-smoothing: antialiased; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; letter-spacing: -0.5px;
